--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "bootstrap": "^5.2.3",
     "core-js": "^3.8.3",
+    "nouislider": "^15.7.0",
     "vue": "^3.2.13",
     "vue-router": "^4.2.1",
     "vue2-transitions": "^0.3.0",
