--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "nouislider": "^15.7.0",
     "vue": "^3.2.13",
     "vue-router": "^4.2.1",
+    "vue-sweetalert2": "^5.0.5",
     "vue2-transitions": "^0.3.0",
     "vuex": "^4.1.0"
   },
